k8s/overlays/uat/imagepull-always-frontend.patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
      - name: frontend
        imagePullPolicy: Always
