k8s/overlays/uat/patch-loadtest-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-master
spec:
  template:
    spec:
      containers:
      - name: locust
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-worker
spec:
  template:
    spec:
      containers:
      - name: locust
